<resources>
    <string name="app_name">Menu de Opcoes</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="foi_clicado">" foi clicado"</string>
    <string name="usar_dados">Usar dados</string>
    <string name="blue">Azul</string>
    <string name="Red">Vermelho</string>
    <string name="sub_menu">Sub menu</string>
    <string name="option_1">Opção 1</string>
    <string name="option_2">Opção 2</string>
</resources>