<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemSalvar"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/salvar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemExcluir"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/excluir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemUsarDados"
        android:checkable="true"
        android:onClick="onMenuItemUseDataClick"
        android:title="@string/usar_dados" />
    <group
        android:id="@+id/groupColors"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuItemBlue"
            android:title="@string/blue" />
        <item
            android:id="@+id/menuItemRed"
            android:title="@string/Red" />
    </group>
    <item
        android:id="@+id/menuItemSubMenu"
        android:title="@string/sub_menu" >
        <menu >
            <item
                android:id="@+id/menuItemOpcao1"
                android:title="@string/option_1" />
            <item
                android:id="@+id/menuItemOpcao2"
                android:title="@string/option_2" />
        </menu>
    </item>
</menu>